2014-02-05  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DGroupingNode.cpp:
	* X3DTexture2DNode.cpp:
	* X3DTexture3DNode.cpp:
	* ImageCubeMapTexture.h:
	* ComposedCubeMapTexture.h:
	* GeneratedCubeMapTexture.h:
	* ComposedCubeMapTexture.cpp: 

2014-02-03  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBaseNode.cpp: 

2014-02-02  Holger Seelig  <holger.seelig@yahoo.de>

	* Appearance.h:
	* Appearance.cpp:
	* ProgramShader.h:
	* ComposedShader.h:
	* LoadSensor.cpp:
	* ProgramShader.cpp:
	* ComposedShader.cpp:
	* ParticleSystem.h:
	* ParticleSystem.cpp: 

2014-02-02  Holger Seelig  <holger.seelig@yahoo.de>

	* Appearance.h:
	* Appearance.cpp:
	* ProgramShader.h:
	* ComposedShader.h:
	* ProgramShader.cpp:
	* ComposedShader.cpp: 

2014-02-02  Holger Seelig  <holger.seelig@yahoo.de>

	* ExplosionEmitter.vs:
	* X3DParticleEmitterNode.h: 

2014-02-02  Holger Seelig  <holger.seelig@yahoo.de>

	* libtitania-x3d.cproj:
	* X3DOutput.h:
	* X3DBaseNode.h:
	* X3DBaseNode.cpp:
	* Box.cpp:
	* ConeEmitter.vs:
	* PointEmitter.vs:
	* VolumeEmitter.vs:
	* SurfaceEmitter.vs:
	* PolylineEmitter.vs:
	* ExplosionEmitter.h:
	* ParticleSystem.cpp:
	* ExplosionEmitter.vs:
	* ExplosionEmitter.cpp:
	* BoundedPhysicsModel.h:
	* X3DParticleEmitterNode.h:
	* BoundedPhysicsModel.cpp:
	* X3DParticleEmitterNode.h: 

2014-02-01  Holger Seelig  <holger.seelig@yahoo.de>

	* ParticleSystem.cpp: 

2014-02-01  Holger Seelig  <holger.seelig@yahoo.de>

	* TimeTrigger.h:
	* BooleanToggle.h:
	* BooleanFilter.h:
	* BooleanTrigger.h:
	* X3DTriggerNode.h:
	* IntegerTrigger.h:
	* BooleanToggle.cpp:
	* BooleanFilter.cpp:
	* BooleanSequencer.h:
	* BooleanTrigger.cpp:
	* IntegerTrigger.cpp:
	* IntegerSequencer.h:
	* X3DSequencerNode.cpp: 

2014-02-01  Holger Seelig  <holger.seelig@yahoo.de>

	* IntegerSequencer.h:
	* BooleanSequencer.h:
	* X3DSequencerNode.h:
	* X3DSequencerNode.cpp:
	* BooleanSequencer.cpp:
	* IntegerSequencer.cpp: 

2014-02-01  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DParticleEmitterNode.h: 